--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -779,7 +779,7 @@ font-size: 20px;
   .headcon {
     margin: 40px auto;
     padding: 10%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 
   }
 
