--- a/localite/src/styles/login.css
+++ b/localite/src/styles/login.css
@@ -20,9 +20,9 @@
   }
 
   .loginpinimg{
-    width: 100px;
+    width: 160px;
     margin-bottom: 40px;
-    margin-top: 60px;
+    /* margin-top: 60px; */
     text-align: center;
   }
   
