--- a/localite/src/styles/topnavbar.css
+++ b/localite/src/styles/topnavbar.css
@@ -83,7 +83,7 @@ p{
     background-color: #fff;
     border: 1px solid rgb(253, 125, 125);
     padding: 10px;
-    z-index: 1000;
+    z-index: 1/0;
     flex-direction: column;
   }
 
