--- a/localite/src/styles/login.css
+++ b/localite/src/styles/login.css
@@ -32,10 +32,23 @@
   }
 
   .ptaglogin{
-    font-size: 20px;
+    margin-top: -20px;
+    font-size: 19px;
+    font-weight: bold;
+  }
+
+  .weldiv{
+    margin-top: 150px;
+  }
+
+  .weldiv h2{
+    margin-top: 20px;
+    font-size: 19px;
+    color: black;
   }
 
   .login-container h2 {
+    
     margin-bottom: 1.5rem;
     color: #333;
     text-align: center;
@@ -92,6 +105,7 @@
     font-size: 26px;
   }
   #loginbtn {
+    font-weight: bold;
     padding: 0.75rem;
     border: none;
     border-radius: 30px;
@@ -158,6 +172,12 @@
       cursor: pointer;
       width: 300px;
       margin: auto;
+    }
+
+    .weldiv h2{
+      margin-top: 20px;
+      font-size: 20px;
+      color: black;
     }
   }
   
