--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -67,14 +67,21 @@ a{
 
 .localitefont{
   /* font-size: 25px; */
-  font-size: 100px;
   color: #2A6171;
   font-weight: bold;
 }
 
-.headcon h1{
-  font-size: 160px;
+
+.localitefont {
+  font-size: 4rem; /* Example of using rem */
+  line-height: 0.5; /* Maintain the same line height */
 }
+
+.headcon p {
+  font-size: 1.375rem; /* 22px is approximately 1.375rem */
+  line-height: 0.5; /* Consistent line height */
+}
+
 
 .headcon p{
   /* border: 1px solid red; */
@@ -82,8 +89,10 @@ a{
   font-size: 22px;
   margin-top: 70px;
   margin-left: 10px;
+  line-height: 2.5; /* Adjust line height for better spacing between lines */
   color: #7DB9B4;
 }
+
 .intoline{
   font-family: 'Futura', sans-serif;
   font-weight: 600;
