--- a/localite/src/styles/footer.css
+++ b/localite/src/styles/footer.css
@@ -58,10 +58,11 @@
   }
   
   .lastline img {
-    height: 20px;
-    width: 16px;
+    height: 30px;
+    width: 30px;
     margin-top: 10px;
     margin-left: 30px;
+    border-radius: 50%;
   }
   
   Link {
@@ -133,7 +134,9 @@
     }
   
     .lastline img {
-      margin: 0; /* Remove margin for better mobile fit */
+      height: 30px;
+      width: 20px;
+      border-radius: 50%;
     }
   
     .footer img {
