--- a/localite/src/styles/home.css
+++ b/localite/src/styles/home.css
@@ -38,6 +38,10 @@ a{
   text-align: left;
 }
 
+#intro{
+  display: none;
+}
+
 .introdiv{
   display: flex;
   /* border: 1px solid red; */
@@ -45,21 +49,12 @@ a{
   margin-top: -80px;
 }
 
-/* .intoline {
-  color: #343232; 
-  text-shadow: 0 0 10px rgba(245, 30, 101, 0.5),
-               0 0 20px rgba(243, 28, 139, 0.4),
-               0 0 30px rgba(233, 123, 123, 0.3),
-               0 0 40px rgba(245, 73, 73, 0.2),
-               0 0 50px rgba(246, 141, 197, 0.1);
-} */
-
 
 .headcon{
   position: relative;
   text-align: left;
   padding-left: 20%;
-  /* margin-top: 20%; */
+  margin-top: 20%;
   width: 50%;
   /* border: 1px solid red; */
   z-index: 9999999;
@@ -69,17 +64,8 @@ a{
   /* font-size: 25px; */
   color: #2A6171;
   font-weight: bold;
-}
-
-
-.localitefont {
   font-size: 4rem; /* Example of using rem */
-  line-height: 0.5; /* Maintain the same line height */
-}
-
-.headcon p {
-  font-size: 1.375rem; /* 22px is approximately 1.375rem */
-  line-height: 0.5; /* Consistent line height */
+  line-height: 10px; /* Maintain the same line height */
 }
 
 
@@ -89,7 +75,7 @@ a{
   font-size: 22px;
   margin-top: 70px;
   margin-left: 10px;
-  line-height: 2.5; /* Adjust line height for better spacing between lines */
+  line-height: 2; /* Adjust line height for better spacing between lines */
   color: #7DB9B4;
 }
 
@@ -115,7 +101,7 @@ a{
   width: 140%;
   /* border: 1px solid red; */
   text-align: left;
-  margin: auto;
+  margin: 30% auto;
   margin-right: 300px;
   margin-left: -200px;
 }
@@ -125,17 +111,19 @@ width: 30%;
 cursor: pointer;
 }
 
-
-
 .movingline {
   overflow: hidden; /* Hides the overflowing text */
   white-space: nowrap; /* Prevents text from wrapping */
-  width: 100%; /* Adjust width as needed */
-  background: linear-gradient(to right, #e41193, #eb8313);
+  width: 100%; /* Full width of the container */
+  background: linear-gradient(to right, #e41193, #eb8313); /* Gradient background */
   position: relative; /* Positions the content relative to the container */
-  color: white;
-  margin-top: -5px;
+  color: white; /* Text color */
+  margin-top: -100px; /* Adjusts vertical positioning */
+  text-align: center; /* Centers the text */
+  animation: move-text 10s linear infinite; /* Animation for moving text */
 }
+
+
 
 .scrolling-text {
   display: inline-block; /* Allows the text to move */
@@ -255,11 +243,16 @@ cursor: pointer;
 }
 
 .aboutdiv{
-  /* border: 1px solid red; */
   margin: auto;
   width: 80%;
   display: flex;
   text-align: left;
+}
+
+.aboutdiv div:nth-child(1){
+  font-size: 30rch;
+  margin-top: -30px;
+
 }
 
 .aboutfirstdiv {
@@ -351,7 +344,7 @@ background-color: #fcfafb;
 }
 
 .threesinglediv p{
-  font-size: 22px;
+  font-size: 20px;
 }
 
 .threesinglediv::after {
@@ -480,6 +473,7 @@ font-size: 20px;
 .connect .pcolor{
   color: #2A6171;
   cursor: pointer;
+  font-weight: bold;
 }
 
 
@@ -1163,6 +1157,7 @@ font-size: 20px;
     margin-top: 0px;
     width: 100%;
   }
-
  
 }
+
+
