--- a/localite/src/styles/event.css
+++ b/localite/src/styles/event.css
@@ -6,7 +6,7 @@
   
   h2 {
     color: #333;
-    border-bottom: 2px solid #007bff;
+    /* border-bottom: 2px solid #007bff; */
     padding-bottom: 10px;
   }
   
@@ -94,7 +94,7 @@
   .pagination button {
     margin: 0 5px;
     padding: 10px 15px;
-    border: 1px solid #007bff;
+    /* border: 1px solid #007bff; */
     border-radius: 5px;
     background-color: white;
     color: #007bff;
