--- a/localite/src/styles/event.css
+++ b/localite/src/styles/event.css
@@ -4,11 +4,11 @@
     font-family: Arial, sans-serif;
   }
   
-  h2 {
+  /* h2 {
     color: #333;
-    /* border-bottom: 2px solid #007bff; */
+    border-bottom: 2px solid #007bff;
     padding-bottom: 10px;
-  }
+  } */
   
   ul {
     list-style-type: none;
