--- a/localite/src/styles/topnavbar.css
+++ b/localite/src/styles/topnavbar.css
@@ -53,8 +53,43 @@ p{
     color: white;
     font-size: 14px;
     background: linear-gradient(to right, #e41193, #eb8313);
-  
 }
+
+.animated-button {
+  background-color: #fb3a3a; /* Blue background */
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  outline: none;
+  transition: all 0.3s ease;
+  animation: glow 1.5s infinite, pulse 1.5s infinite;
+}
+
+@keyframes glow {
+  0%, 100% {
+    box-shadow: 0 0 10px #fc6adf, 0 0 20px #f67fde, 0 0 30px #f6a8e6;
+  }
+  50% {
+    box-shadow: 0 0 20px #f786e0, 0 0 40px #fba0e9, 0 0 60px #f882e0;
+  }
+}
+
+@keyframes pulse {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+}
+
+.animated-button:hover {
+  background-color: #0056b3; /* Darker blue on hover */
+}
+
 
 /* Mobile styles */
 @media (max-width: 768px) {
