updated chsnges done

--- a/localite/src/styles/topnavbar.css
+++ b/localite/src/styles/topnavbar.css
@@ -70,10 +70,10 @@ p{
 
 @keyframes glow {
   0%, 100% {
-    box-shadow: 0 0 10px #fc6adf, 0 0 20px #f67fde, 0 0 30px #f6a8e6;
+    box-shadow: 0 0 10px #f8a2e7, 0 0 20px #f6b0e8, 0 0 30px #f9baec;
   }
   50% {
-    box-shadow: 0 0 20px #f786e0, 0 0 40px #fba0e9, 0 0 60px #f882e0;
+    box-shadow: 0 0 20px #f9b0ea, 0 0 40px #fbb5ed, 0 0 60px #fbb7ed;
   }
 }
 
